Wired up secure password package.

--- a/client/views/password.html
+++ b/client/views/password.html
@@ -8,8 +8,10 @@
 	        </label>
 	        <input type="text" class="form-control password-input"
 	          id="generated-password"
-	          placeholder="Secure password generator">
-	        <button type="button" class="btn btn-primary">Make it so</button>
+	          placeholder="Secure password generator" spellcheck="false">
+	        <button type="button" class="btn btn-primary js-generate">
+						Make it so
+					</button>
 	      </form>
 	    </div>
 	  </div>
